--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,9 +21,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|bottom"
         android:layout_marginBottom="16dp"
-        app:floating_background_color="?attr/colorPrimary"
+        app:floating_background_color="@color/colorAccent"
         android:elevation="0dp"
-
         app:floating_title="Start Tour"
         app:floating_title_color="@android:color/white"
         />
