--- a/textfab/src/main/res/layout/widget_floating_text_button.xml
+++ b/textfab/src/main/res/layout/widget_floating_text_button.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
+    <LinearLayout android:id="@+id/linearly"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        >
     <androidx.cardview.widget.CardView
         android:id="@+id/layout_button_container"
         android:layout_width="wrap_content"
@@ -25,4 +30,5 @@
                 tools:ignore="MissingPrefix,RtlHarfadcoded,RtlSymmetry" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+    </LinearLayout>
 </merge>
